Fixed table text alignment

--- a/css/netmann.css
+++ b/css/netmann.css
@@ -2,6 +2,7 @@
     border-width: 1px;
     border-style: solid;
     border-color: black;
+    text-align: left;
 }
 
 .rejected {
